final bug fix for dowshift/SS cancel fix

--- a/src/components/myModules/Signs/SignEditor.css
+++ b/src/components/myModules/Signs/SignEditor.css
@@ -192,3 +192,10 @@
      
       padding-top:20px;
   }
+  
+  .DownshiftLabel{
+      border : solid grey 1px;
+      height:18px;
+  
+
+  }
